package diag2code;

public record Card(String color, String value) {

}
